NEW global functions: - $A.events.dialog.complete - $A.events.table.beforeAddRows - $A.events.table.addRows - $A.events.table.beforeOpenInlineBox - $A.events.table.complete - $A.events.button.click - $A.events.button.beforeClick - $A.events.button.complete
NEW on/off/one pre-events
- $A.events.xyz.on.event(func, name)
- $A.events.xyz.off.event(name)
- $A.events.xyz.one.event(func)

EXAMPLE:
- $A.events.button.on.click(function(){alert('ok')}, 'my-button-name')
- $A.events.button.off.click('my-button-name')
- $A.events.button.one.click(function(){alert('ok 1x')})

--- a/src/styles/core.css
+++ b/src/styles/core.css
@@ -4,11 +4,13 @@
     src: url("../fonts/OpenSans-CondBold.woff") format("woff"),
     url("../fonts/OpenSans-CondBold.ttf") format("truetype");
 }
+/*
 html, body {
     height: 100%;
     margin: 0;
     padding: 0;
 }
+*/
 .automizy-hide{
     display:none;
     visibility:hidden;
