--- a/src/styles/table.css
+++ b/src/styles/table.css
@@ -199,7 +199,7 @@
     max-width: 250px;
     position: relative;
 }
-.automizy-table td:first-child{
+.automizy-table td.automizy-main-cell{
     font-weight:bold;
 }
 .automizy-table th{
