Updates and Fixes

--- a/src/styles/form.css
+++ b/src/styles/form.css
@@ -17,6 +17,12 @@
 .automizy-form .automizy-form-buttons{
     text-align:center;
 }
+.automizy-form .automizy-form-buttons .automizy-button{
+    margin-left:4px;
+}
+.automizy-form .automizy-form-buttons .automizy-button:first-child{
+    margin-left:0;
+}
 .automizy-form .automizy-form-tables{
     padding: 12px 12px 36px 12px;
 }
