--- a/src/styles/button.css
+++ b/src/styles/button.css
@@ -119,6 +119,6 @@
 }
 
 .automizy-button.disabled.automizy-skin-simple-green a{
-    background-color: rgba(157, 189, 121, 0.5);
+    background-color: #cedebc;
 }
 
