--- a/src/styles/core.css
+++ b/src/styles/core.css
@@ -32,3 +32,92 @@ html, body {
     -ms-user-select: none;
     user-select: none;
 }
+.automizy-loading{
+    display: inline-block;
+    width:63px;
+}
+
+.automizy-loading-in{
+    background-color:transparent;
+    float:left;
+    height:14px;
+    margin-left:7px;
+    width:14px;
+    -moz-animation-name:automizy_circle_g;
+    -moz-animation-duration:1s;
+    -moz-animation-iteration-count:infinite;
+    -moz-animation-direction:normal;
+    -moz-border-radius:9px;
+    -webkit-animation-name:automizy_circle_g;
+    -webkit-animation-duration:1s;
+    -webkit-animation-iteration-count:infinite;
+    -webkit-animation-direction:normal;
+    -webkit-border-radius:9px;
+    -ms-animation-name:automizy_circle_g;
+    -ms-animation-duration:1s;
+    -ms-animation-iteration-count:infinite;
+    -ms-animation-direction:normal;
+    -ms-border-radius:9px;
+    -o-animation-name:automizy_circle_g;
+    -o-animation-duration:1s;
+    -o-animation-iteration-count:infinite;
+    -o-animation-direction:normal;
+    -o-border-radius:9px;
+    animation-name:automizy_circle_g;
+    animation-duration:1s;
+    animation-iteration-count:infinite;
+    animation-direction:normal;
+    border-radius:9px;
+}
+.automizy-loading-in-1{
+    -moz-animation-delay:0.18s;
+    -webkit-animation-delay:0.18s;
+    -ms-animation-delay:0.18s;
+    -o-animation-delay:0.18s;
+    animation-delay:0.18s;
+}
+.automizy-loading-in-2{
+    -moz-animation-delay:0.42s;
+    -webkit-animation-delay:0.42s;
+    -ms-animation-delay:0.42s;
+    -o-animation-delay:0.42s;
+    animation-delay:0.42s;
+}
+.automizy-loading-in-3{
+    -moz-animation-delay:0.54s;
+    -webkit-animation-delay:0.54s;
+    -ms-animation-delay:0.54s;
+    -o-animation-delay:0.54s;
+    animation-delay:0.54s;
+}
+
+@-moz-keyframes automizy_circle_g{
+    0%{}
+    50%{background-color:#000000}
+    100%{}
+}
+@-webkit-keyframes automizy_circle_g{
+    0%{}
+    50%{background-color:#000000}
+    100%{}
+}
+@-ms-keyframes automizy_circle_g{
+    0%{}
+    50%{background-color:#000000}
+    100%{}
+}
+@-o-keyframes automizy_circle_g{
+    0%{}
+    50%{background-color:#000000}
+    100%{}
+}
+@keyframes automizy_circle_g{
+    0%{}
+    50%{background-color:#000000}
+    100%{}
+}
+
+
+.automizy-table-load{
+    display:inline-block;
+}
