--- a/src/styles/input.css
+++ b/src/styles/input.css
@@ -268,7 +268,7 @@ input[type='checkbox'], input[type='radio']{
     outline: none !important;
 }
 
-input[type='checkbox'], input[type='radio']{
+input[type='checkbox']{
     width: 15px;
     height: 15px;
 }
