--- a/src/automizy.css
+++ b/src/automizy.css
@@ -7,3 +7,4 @@
 @import url("styles/ajax-document-cover.css");
 @import url("styles/core.css");
 @import url("styles/mobile.css");
+@import url("styles/iphoneStyle.css");
