--- a/src/styles/core.css
+++ b/src/styles/core.css
@@ -11,19 +11,6 @@ html, body {
     padding: 0;
 }
 */
-.automizy-hide{
-    display:none;
-    visibility:hidden;
-    width:0px;
-    height:0px;
-    border:none;
-    outline:none;
-    opacity:0;
-    overflow:hidden;
-    position:absolute;
-    top:-10000px;
-    left:-10000px;
-}
 .automizy-noselect {
     -webkit-touch-callout: none;
     -webkit-user-select: none;
@@ -35,6 +22,22 @@ html, body {
 .automizy-loading{
     display: inline-block;
     width:63px;
+}
+.automizy-permission-trap,
+.automizy-hide{
+    display:none !important;
+    visibility: hidden !important;
+    overflow:hidden !important;
+    position:absolute !important;
+    top:0 !important;
+    left:0 !important;
+    /*z-index:-10 !important;*/
+    width:0 !important;
+    height:0 !important;
+    color:transparent !important;
+    font-size:0 !important;
+    line-height:0 !important;
+    border:none !important;
 }
 
 .automizy-loading-in{
