--- a/src/automizy.css
+++ b/src/automizy.css
@@ -8,3 +8,4 @@
 @import url("styles/core.css");
 @import url("styles/mobile.css");
 @import url("styles/iphoneStyle.css");
+@import url("styles/select.css");
