--- a/src/styles/input.css
+++ b/src/styles/input.css
@@ -1,133 +1,142 @@
-@import url("https://fonts.googleapis.com/css?family=Roboto");
-
-.automizy-input{
+.automizy-input {
     display: inline-block;
     position: relative;
-    padding:0 0 12px 0;
+    padding: 0 0 12px 0;
     max-width: 100%;
-    vertical-align: top;
 }
-.automizy-input .automizy-input{
-    padding:0;
+
+.automizy-input .automizy-input {
+    padding: 0;
 }
-.automizy-input.new-row{
+
+.automizy-input.new-row {
     clear: both;
     display: block;
 }
+
 .automizy-input.automizy-skin-simple-automizy input[type='text'],
 .automizy-input.automizy-skin-simple-automizy input[type='number'],
 .automizy-input.automizy-skin-simple-automizy input[type='password'],
 .automizy-input.automizy-skin-simple-automizy select,
-.automizy-input.automizy-skin-simple-automizy textarea{
+.automizy-input.automizy-skin-simple-automizy textarea {
     box-sizing: border-box;
-    font-family: 'Roboto', sans-serif;
-    font-size: 14px;
-    width: 300px;
-    height: 30px;
-    border-width: 1px;
-    border-color: rgb( 204, 204, 204 );
-    border-style: solid;
-    background-color: rgb( 255, 255, 255 );
-    -webkit-border-radius: 3px;
-    -moz-border-radius: 3px;
-    border-radius: 3px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    border-radius: 5px;
     outline: none;
     max-width: 100%;
-    padding-left:8px;
-    position: relative;
-}
-.automizy-input.automizy-skin-simple-automizy textarea{
-    height:80px;
+    font-size: 13px;
+    display: block;
+    float: none;
+    background: #fff;
+    width: 100%;
+    height: 34px;
+    padding: 6px 12px;
+    color: #2b2f33;
+    border: 1px solid #dfe8f1;
+    -webkit-box-shadow: inset 1px 1px 3px #f6f6f6;
+    -moz-box-shadow: inset 1px 1px 3px #f6f6f6;
+    box-shadow: inset 1px 1px 3px #f6f6f6;
+    line-height: normal;
 }
 
-.automizy-input.automizy-skin-simple-automizy input::-webkit-input-placeholder,
-.automizy-input.automizy-skin-simple-automizy textarea::-webkit-input-placeholder{ /* Chrome/Opera/Safari */
-    color: rgb( 158, 158, 158 );
-}
-.automizy-input.automizy-skin-simple-automizy input::-moz-placeholder,
-.automizy-input.automizy-skin-simple-automizy textarea::-moz-placeholder{ /* Firefox 19+ */
-    color: rgb( 158, 158, 158 );
-}
-.automizy-input.automizy-skin-simple-automizy input:-ms-input-placeholder,
-.automizy-input.automizy-skin-simple-automizy textarea:-ms-input-placeholder { /* IE 10+ */
-    color: rgb( 158, 158, 158 );
-}
-.automizy-input.automizy-skin-simple-automizy input:-moz-placeholder,
-.automizy-input.automizy-skin-simple-automizy textarea:-moz-placeholder{ /* Firefox 18- */
-    color: rgb( 158, 158, 158 );
+.automizy-input.automizy-skin-simple-automizy textarea {
+    height: 80px;
 }
 
 .automizy-input.automizy-skin-simple-automizy input[type='text']:focus,
 .automizy-input.automizy-skin-simple-automizy input[type='number']:focus,
 .automizy-input.automizy-skin-simple-automizy input[type='password']:focus,
 .automizy-input.automizy-skin-simple-automizy select:focus,
-.automizy-input.automizy-skin-simple-automizy textarea:focus{
-    /*
-    background-color:#ffffff;
-    color:#000000;
-    border-color:#79aa41;
-    */
+.automizy-input.automizy-skin-simple-automizy textarea:focus {
+    color: #333;
+    border-color: #3da6ff;
 }
+
 .automizy-input.automizy-skin-simple-automizy input[type='text']:disabled,
 .automizy-input.automizy-skin-simple-automizy input[type='number']:disabled,
 .automizy-input.automizy-skin-simple-automizy input[type='password']:disabled,
 .automizy-input.automizy-skin-simple-automizy select:disabled,
-.automizy-input.automizy-skin-simple-automizy textarea:disabled{
-    background-color: #e9eae6;
-}
-.automizy-input.automizy-skin-simple-automizy.error input,
-.automizy-input.automizy-skin-simple-automizy.error textarea{
-    border-color:#da4b50;
-}
-.automizy-input.automizy-skin-simple-automizy label{
-    width: 240px;
-    display:inline-block;
-    text-align: left;
-    /*margin: 0 8px 16px 16px;*/
-    vertical-align: top;
-}
-.automizy-input.automizy-skin-simple-automizy .automizy-input-help{
-    line-height:10000px;
-    width:17px;
-    height:17px;
-    display:inline-block;
-    overflow:hidden;
-    margin:4px 0 0 8px;
-    opacity:0.5;
-    /*background-image:url('../../images/help-icon.png');*/ /* 17px */
-    cursor:pointer;
-    vertical-align: top;
-}
-.automizy-input .automizy-input-box{
-    display:inline-block;
-    position:relative;
-    max-width: 100%;
+.automizy-input.automizy-skin-simple-automizy textarea:disabled {
+    cursor: not-allowed;
+    opacity: .65;
+    background: #fafafa;
+    filter: alpha(opacity:65);
 }
 
-.automizy-input .automizy-input-box.automizy-input-has-help{
+.automizy-input.automizy-skin-simple-automizy.error input {
+    border-color: red;
+}
+
+.automizy-input.automizy-skin-simple-automizy label {
+    width: 240px;
+    vertical-align: top;
+    padding-top: 7px;
+    font-weight: 700;
+    display: inline-block;
+    font-size: 13px;
+    overflow-x: hidden;
+    color: #3e4855;
+    line-height: 1.42857143;
+    text-align: right;
+    padding-right: 20px;
+    padding-left: 10px;
+    box-sizing: border-box;
+}
+
+.automizy-input.automizy-skin-simple-automizy .automizy-input-help {
+    line-height: 10000px;
+    width: 17px;
+    height: 17px;
+    display: inline-block;
+    overflow: hidden;
+    margin: 4px 0 0 8px;
+    opacity: 0.5;
+    /*background-image:url('../../images/help-icon.png');*/ /* 17px */
+    cursor: pointer;
+    vertical-align: top;
+}
+
+.automizy-input .automizy-input-box {
+    display: inline-block;
+    position: relative;
+    max-width: 100%;
+    padding-right: 10px;
+    box-sizing: border-box;
+}
+
+.automizy-input .automizy-input-box.automizy-input-has-help {
     width: calc(100% - 25px) !important;
     max-width: 300px !important;
 }
 
-.automizy-input .automizy-input-box.new-row{
+.automizy-input .automizy-input-box.new-row {
     clear: both;
     margin: 0 24px 16px 0;
     display: block;
 }
-.automizy-input.new-row label{
-    margin:0 0 3px 0;
-    font-family:Arial, Helvetica, sans-serif;
+
+.automizy-input.new-row label {
+    margin: 0 0 3px 0;
+    font-family: Arial, Helvetica, sans-serif;
 }
+
+/*Validation*/
+
+.automizy-input.automizy-skin-simple-automizy.error input,
+.automizy-input.automizy-skin-simple-automizy.error textarea{
+    border-color:#da4b50 !important;
+}
+
 .automizy-input .automizy-input-box-error{
     display:none;
-    /*margin:0 0 0 270px;*/
+    margin: 5px 0;
     position:relative;
     box-sizing: border-box;
     color: #da4b50;
     text-align: left;
     border: 1px solid #da4b50;
     width: 100%;
-    margin: -2px 0 0 0;
     padding: 12px 6px 9px 9px;
     font-weight: bold;
     font-size: 14px;
@@ -136,36 +145,39 @@
 .automizy-input.error .automizy-input-box-error{
     display:block;
 }
-.automizy-input-help-content{
-    display:none;
-    position:absolute;
-    top:-10px;
-    left:0;
-    width:259px;
-    max-width:259px;
-    min-height:50px;
-    padding:12px;
-    background-color:#fffbd0;
-    border:1px solid #ebe7bc;
+
+
+.automizy-input.automizy-skin-simple-automizy.valid input,
+.automizy-input.automizy-skin-simple-automizy.valid textarea{
+    border-color:#4CAF50 !important;
+}
+
+/*Help tooltip*/
+
+.automizy-input-help-content {
+    display: none;
+    position: absolute;
+    top: -10px;
+    left: 0;
+    width: 259px;
+    max-width: 259px;
+    min-height: 50px;
+    padding: 12px;
+    background-color: #fffbd0;
+    border: 1px solid #ebe7bc;
     font-family: Arial, Helvetica, sans-serif;
-    z-index:5000;
+    z-index: 5000;
 }
-.automizy-input-help-content .automizy-input-help-content-arrow{
-    margin:0 10px 0 -26px;
-    padding:0;
-    float:left;
-}
-.automizy-input-loading-box{
-    display:none;
-    position:absolute;
-    top:0;
-    left:0;
-    width:100%;
-    height:100%;
-    background:#ffffff url('') left center;
+
+.automizy-input-help-content .automizy-input-help-content-arrow {
+    margin: 0 10px 0 -26px;
+    padding: 0;
+    float: left;
 }
 
 
+
+/*
 
 .automizy-skin-simple-automizy .ui-multiselect{
     font-size:14px;
@@ -188,7 +200,7 @@
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
-    max-width:89%;
+    max-width:calc(100% - 25px);
 }
 .automizy-skin-simple-automizy .ui-multiselect.ui-state-hover{
     border:1px solid #b6c5a4;
@@ -219,7 +231,6 @@
 .automizy-skin-simple-automizy .ui-multiselect-menu li{
     padding:0px;
     font-size:14px;
-    /*margin-right:15px;*/
 }
 .automizy-skin-simple-automizy .ui-multiselect-menu label{
 
@@ -235,109 +246,197 @@
     border-color:#e5e5e0;
     outline:none;
 }
-.automizy-skin-simple-automizy .simple-automizy-file-box{
-    display:block;
-    height:33px;
+
+*/
+.automizy-skin-simple-automizy .simple-automizy-file-box {
+    display: block;
+    height: 33px;
 }
 
-.automizy-skin-simple-automizy .simple-automizy-file-box .automizy-button a{
-    padding: 6px 10px 5px 10px;
-    min-width:85px;
-}
-
-.automizy-skin-simple-automizy .simple-automizy-file-box .automizy-input input{
-    color: rgb( 158, 158, 158 );
-}
-
-.automizy-skin-simple-automizy .simple-automizy-file-box td{
-    vertical-align:top;
-}
-
-.simple-automizy-slider{
-    width:250px;
-    margin:5px 0 0 0;
-    display:inline-block;
-}
-.simple-automizy-slider-value{
-    width:50px;
-    display:inline-block;
-    box-sizing:border-box;
-    padding:4px 0 0 15px;
+.automizy-skin-simple-automizy .simple-automizy-file-box td {
     vertical-align: top;
-    text-align:left;
-}
-
-.automizy-input-icon{
-    width:30px;
-    height:30px;
-    display:none;
-    position:absolute;
-    top:0;
-    right:0;
-    opacity:0.5;
-    background:transparent url('') no-repeat center center;
-    cursor:pointer;
-}
-.automizy-input-icon:hover{
-    opacity:0.7;
-}
-.automizy-input-icon.automizy-icon-add-box{
-    background-image: url('data:image/svg+xml;utf8, <svg fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg"><path d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm-2 10h-4v4h-2v-4H7v-2h4V7h2v4h4v2z"/><path d="M0 0h24v24H0z" fill="none"/> </svg>');
 }
 
 
+.simple-automizy-slider {
+    width: 100%;
+    margin: 5px 0 0 0;
+    display: inline-block;
+}
 
-input[type='checkbox'], input[type='radio']{
-    background-image: url('../images/checkbox-radio.png');
+.simple-automizy-slider-value {
+    width: 50px;
+    display: inline-block;
+    box-sizing: border-box;
+    padding: 4px 0 0 15px;
+    vertical-align: top;
+    text-align: left;
+}
+
+.simple-automizy-slider.ui-slider {
+    position: relative;
+    text-align: left
+}
+
+.simple-automizy-slider.ui-slider .ui-slider-handle, .ui-slider .ui-slider-range, .ui-slider-horizontal, .ui-slider-vertical {
+    -webkit-border-radius: 100px;
+    -moz-border-radius: 100px;
+    border-radius: 100px
+}
+
+.simple-automizy-slider.ui-slider .ui-slider-handle {
+    position: absolute;
+    z-index: 2;
+    width: 8px;
+    height: 8px;
+    border: 6px solid #FFF;
+    box-sizing: initial;
+    cursor: pointer;
+    box-shadow: 1px 1px 3px rgba(0, 0, 0, .3);
+    background-color: rgb( 244, 106, 31 );
+    outline: none;
+}
+
+.simple-automizy-slider.ui-slider .ui-slider-handle:active, .ui-slider .ui-slider-handle:hover {
+
+}
+
+.simple-automizy-slider.ui-slider .ui-slider-range {
+    position: absolute;
+    z-index: 1;
+    display: block;
+    border: 0
+}
+
+.simple-automizy-slider.ui-slider.ui-state-disabled .ui-slider-handle, .ui-slider.ui-state-disabled .ui-slider-range {
+    filter: inherit
+}
+
+.simple-automizy-slider.ui-slider-horizontal {
+    height: 7px;
+    background: #ddd;
+    -webkit-box-shadow: inset 0 1px 6px #717171;
+    -moz-box-shadow: inset 0 1px 6px #717171;
+    box-shadow: inset 0 1px 6px #717171
+}
+
+.simple-automizy-slider.ui-slider-horizontal .ui-slider-handle {
+    top: -7px;
+    margin-left: -7px
+}
+
+.simple-automizy-slider.ui-slider-horizontal .ui-slider-range {
+    top: 0;
+    height: 100%;
+    opacity: .6;
+    -moz-opacity: .6;
+    filter: alpha(opacity:60)
+}
+
+.simple-automizy-slider.ui-slider-horizontal .ui-slider-range-min {
+    left: 0
+}
+
+.simple-automizy-slider.ui-slider-horizontal .ui-slider-range-max {
+    right: 0
+}
+
+.simple-automizy-slider.ui-slider-vertical {
+    width: 7px;
+    height: 100px;
+    background: #ddd;
+    -webkit-box-shadow: inset 1px 0 6px #717171;
+    -moz-box-shadow: inset 1px 0 6px #717171;
+    box-shadow: inset 1px 0 6px #717171
+}
+
+.simple-automizy-slider.ui-slider-vertical .ui-slider-handle {
+    left: -7px;
+    margin-bottom: -8px;
+    margin-left: 0
+}
+
+.simple-automizy-slider.ui-slider-vertical .ui-slider-range {
+    left: 0;
+    width: 100%;
+    opacity: .6;
+    -moz-opacity: .6;
+    filter: alpha(opacity:60)
+}
+
+.simple-automizy-slider.ui-slider-vertical .ui-slider-range-min {
+    bottom: 0
+}
+
+.simple-automizy-slider.ui-slider-vertical .ui-slider-range-max {
+    top: 0
+}
+
+/*Checkbox & radio*/
+
+.automizy-input input[type='checkbox'], .automizy-input input[type='radio'], input.automizy-table-rowcheck{
+    background-image: url(../../images/checkbox-radio.png);
     background-repeat: no-repeat;
     margin: 0 8px 0 0;
     padding: 0;
-    -moz-appearance: none; /* not working */
+    -moz-appearance: none;
     -webkit-appearance: none;
-    -ms-appearance: none; /*not working */
+    -ms-appearance: none;
     -o-appearance: none;
     appearance: none;
     outline: none !important;
 }
-
-input[type='checkbox']{
+.automizy-input input, input.automizy-table-rowcheck{
     width: 15px;
     height: 15px;
 }
-input[type='radio']{
+.automizy-input input[type='radio']{
     width: 18px;
     height: 18px;
 }
 
-/* not checked */
+.automizy-input input[type="checkbox"],
+.automizy-input input[type="radio"]{
+    margin-top: 7px;
+}
+
 .automizy-input.automizy-skin-simple-automizy input[type='radio']{background-position: -30px 0; }
-/* checked */
 .automizy-input.automizy-skin-simple-automizy input[type='radio']:checked { background-position: -48px 0;}
-.automizy-input.automizy-skin-simple-automizy input[type='checkbox']:checked { background-position: -15px 0; }
+.automizy-input.automizy-skin-simple-automizy input[type='checkbox']:checked,
+input.automizy-table-rowcheck:checked { background-position: -15px 0; }
 .automizy-input.automizy-skin-simple-automizy input[type='checkbox']:hover:checked,
-.automizy-input.automizy-skin-simple-automizy input[type='checkbox']:focus:checked { background-position: -15px -18px; }
+.automizy-input.automizy-skin-simple-automizy input[type='checkbox']:focus:checked,
+input.automizy-table-rowcheck:hover:checked,
+input.automizy-table-rowcheck:focus:checked { background-position: -15px -18px; }
 .automizy-input.automizy-skin-simple-automizy input[type='radio']:hover:checked,
 .automizy-input.automizy-skin-simple-automizy input[type='radio']:focus:checked { background-position: -48px -18px; }
-/* focus */
 .automizy-input.automizy-skin-simple-automizy input[type='checkbox']:hover,
-.automizy-input.automizy-skin-simple-automizy input[type='checkbox']:focus { background-position: 0 -18px; }
+.automizy-input.automizy-skin-simple-automizy input[type='checkbox']:focus,
+input.automizy-table-rowcheck:hover,
+input.automizy-table-rowcheck:focus { background-position: 0 -18px; }
 .automizy-input.automizy-skin-simple-automizy input[type='radio']:hover,
 .automizy-input.automizy-skin-simple-automizy input[type='radio']:focus { background-position: -30px -18px; }
-/* active */
-.automizy-input.automizy-skin-simple-automizy input[type='checkbox']:active { background-position: 0 -36px; }
+.automizy-input.automizy-skin-simple-automizy input[type='checkbox']:active,
+input.automizy-table-rowcheck:active { background-position: 0 -36px; }
 .automizy-input.automizy-skin-simple-automizy input[type='radio']:active { background-position: -30px -36px; }
-.automizy-input.automizy-skin-simple-automizy input[type='checkbox']:active:checked { background-position: -15px -36px; }
+.automizy-input.automizy-skin-simple-automizy input[type='checkbox']:active:checked,
+input.automizy-table-rowcheck:active:checked { background-position: -15px -36px; }
 .automizy-input.automizy-skin-simple-automizy input[type='radio']:active:checked { background-position: -48px -36px; }
-/* disabled */
-.automizy-input.automizy-skin-simple-automizy input[type='checkbox']:disabled { background-position: 0 -54px; }
+.automizy-input.automizy-skin-simple-automizy input[type='checkbox']:disabled,
+input.automizy-table-rowcheck:disabled { background-position: 0 -54px; }
 .automizy-input.automizy-skin-simple-automizy input[type='radio']:disabled { background-position: -30px -54px; }
-.automizy-input.automizy-skin-simple-automizy input[type='checkbox']:disabled:checked { background-position: -15px -54px; }
+.automizy-input.automizy-skin-simple-automizy input[type='checkbox']:disabled:checked,
+input.automizy-table-rowcheck:disabled:checked { background-position: -15px -54px; }
 .automizy-input.automizy-skin-simple-automizy input[type='radio']:disabled:checked{ background-position: -48px -54px; }
 .automizy-input.automizy-skin-simple-automizy input[type='checkbox']:hover:disabled,
-.automizy-input.automizy-skin-simple-automizy input[type='checkbox']:focus:disabled { background-position: 0 -54px; }
+.automizy-input.automizy-skin-simple-automizy input[type='checkbox']:focus:disabled,
+input.automizy-table-rowcheck:hover:disabled,
+input.automizy-table-rowcheck:focus:disabled { background-position: 0 -54px; }
 .automizy-input.automizy-skin-simple-automizy input[type='radio']:hover:disabled ,
 .automizy-input.automizy-skin-simple-automizy input[type='radio']:focus:disabled { background-position: -30px -54px; }
-.automizy-input.automizy-skin-simple-automizy input[type='checkbox']:hover:disabled:checked ,
-.automizy-input.automizy-skin-simple-automizy input[type='checkbox']:focus:disabled:checked { background-position: -15px -54px; }
+.automizy-input.automizy-skin-simple-automizy input[type='checkbox']:hover:disabled:checked,
+.automizy-input.automizy-skin-simple-automizy input[type='checkbox']:focus:disabled:checked,
+input.automizy-table-rowcheck:hover:disabled:checked,
+input.automizy-table-rowcheck:focus:disabled:checked { background-position: -15px -54px; }
 .automizy-input.automizy-skin-simple-automizy input[type='radio']:hover:disabled:checked,
 .automizy-input.automizy-skin-simple-automizy input[type='radio']:focus:disabled:checked { background-position: -48px -54px; }
