--- a/src/styles/button.css
+++ b/src/styles/button.css
@@ -1,16 +1,20 @@
-@import url("https://fonts.googleapis.com/css?family=Roboto");
 
 .automizy-button{
     display: inline-block;
     position: relative;
+    text-transform: uppercase;
+    font-weight: 700;
+    font-size: 12px;
 }
+
 .automizy-button.new-row{
     clear: both;
     margin: 0 24px 16px 0;
     display: block;
 }
+
+/*Nobox buttons*/
 .automizy-button.automizy-skin-nobox-green a, .automizy-button.automizy-skin-nobox-orange a{
-    font-size: 14px;
     font-family: 'Roboto', sans-serif;
     line-height: 1.286;
     text-align: left;
@@ -19,120 +23,138 @@
 .automizy-button.disabled.automizy-skin-nobox-green a, .automizy-button.automizy-skin-nobox-orange a{
     color: #c0c0c0;
 }
-
 .automizy-button.automizy-skin-nobox-orange a{
     color: rgb( 244, 106, 31 );
 }
 .automizy-button.automizy-skin-nobox-green a{
-    color: #669138;
+    color: #4CAF50;
+}
+.automizy-button.automizy-skin-nobox-green a:hover,
+.automizy-button.automizy-skin-nobox-orange a:hover{
+    text-decoration: underline;
 }
 
-.automizy-button.automizy-skin-nobox-green.disabled a,
-.automizy-button.automizy-skin-nobox-orange.disabled a{
-    opacity:0.4;
-}
 
+/*Boxed buttons*/
 .automizy-button.automizy-skin-simple-white a,
 .automizy-button.automizy-skin-image-white a,
 .automizy-button.automizy-skin-simple-orange a,
 .automizy-button.automizy-skin-simple-green a{
+    line-height: 32px;
+    height: 34px;
+    min-width: 34px;
     box-sizing: border-box;
     -webkit-border-radius: 3px;
     -moz-border-radius: 3px;
     border-radius: 3px;
     text-indent:0px;
-    border:none;
     display:inline-block;
     font-family: 'Roboto', sans-serif;
     text-align: center;
-    font-size: 14px;
-    font-weight:normal;
     font-style:normal;
     text-decoration:none;
     margin:0;
     position:relative;
     vertical-align:middle;
     white-space: nowrap;
-    min-width: 144px;
-    padding: 12px 10px;
+    padding: 0 12px;
+    cursor: pointer;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    outline: 0;
+    font-weight: 700;
+    border-width: 1px;
+    border-style: solid;
+    border-color: transparent;
     -webkit-transition: background-color 0.2s;
     transition: background-color 0.2s;
 }
 .automizy-button.automizy-skin-image-white a{
     min-width: 50px;
 }
-
 .automizy-button.automizy-skin-simple-white.automizy-button-thin a,
 .automizy-button.automizy-skin-image-white.automizy-button-thin a,
 .automizy-button.automizy-skin-simple-orange.automizy-button-thin a,
 .automizy-button.automizy-skin-simple-green.automizy-button-thin a{
     padding:6px 10px 6px 10px;
 }
-
 .automizy-button.disabled a{
     cursor:default !important;
+    outline: 0 !important;;
+    -webkit-box-shadow: none !important;;
+    box-shadow: none !important;
+    opacity: 0.65 !important;;
 }
+
+.automizy-button.automizy-skin-simple-green a:active,
+.automizy-button.automizy-skin-simple-white a:active,
+.automizy-button.automizy-skin-simple-orange a:active{
+    outline: 0;
+    background-image: none;
+    -webkit-box-shadow: inset 0 3px 5px rgba(0,0,0,.125);
+    box-shadow: inset 0 3px 5px rgba(0,0,0,.125);
+}
+
 
 .automizy-button.automizy-skin-simple-white a,
 .automizy-button.automizy-skin-image-white a{
-    background-color: rgb( 217, 217, 217 );
-    color: rgb( 88, 88, 88 );
-}
+    color: #555a60;
+    background-color: #FEFEFF;
+    border-color: rgba(158,173,195,.16);
 
+}
 .automizy-button.automizy-skin-simple-white a:hover,
 .automizy-button.automizy-skin-image-white a:hover,
 .automizy-input-box input[type="file"]:hover + span .automizy-skin-simple-white a{
-    background-color: rgb( 226, 226, 226 )
+    color: #2b2f33;
+    border-color: #DCD8E7;
+    background-color: #f3f3f9;
 }
+
 .automizy-button.automizy-skin-image-white a{
     line-height: 0;
     padding: 7px 20px 8px 20px;
 }
-
 .automizy-button.automizy-skin-simple-white.disabled a,
 .automizy-button.automizy-skin-image-white.disabled a{
-    background-color: rgb( 238, 237, 237 );
-    color: rgb( 169, 168, 168 );
+    color: #555a60;
+    background-color: #FEFEFF;
+    border-color: rgba(158,173,195,.16);
 }
 .automizy-button.automizy-skin-image-white.disabled a img{
-    opacity:0.4;
+    color: #555a60;
+    background-color: #FEFEFF;
+    border-color: rgba(158,173,195,.16);
 }
-
-
 .automizy-button.automizy-skin-simple-orange a{
     background-color: rgb( 244, 106, 31 );
     color: rgb( 255, 255, 255 );
 }
-
 .automizy-button.automizy-skin-simple-orange a:hover,
 .automizy-input-box input[type="file"]:hover + span .automizy-skin-simple-orange a{
     background-color: rgb( 255, 121, 31 );
+    border-color: #f24a15;
 }
-
 .automizy-button.automizy-skin-simple-orange a:active,
 .automizy-input-box input[type="file"]:active + span .automizy-skin-simple-orange a{
-    background-color: rgb( 237, 92, 28 );
 }
 
 .automizy-button.disabled.automizy-skin-simple-orange a{
-    background-color: rgb( 255, 182, 142 );
+    background-color: rgb( 244, 106, 31 ) !important;
+    color: rgb( 255, 255, 255 ) !important;
 }
-
-
 .automizy-button.automizy-skin-simple-green a{
-    background-color:#669138;
-    color: rgb( 255, 255, 255 );
+    color: #fff;
+    background: #4CAF50;
 }
-
 .automizy-button.automizy-skin-simple-green a:hover{
-    background-color: #8cb262;
+    background: #59bc5d;
 }
-
 .automizy-button.automizy-skin-simple-green a:active{
-    background-color: #669138;
 }
-
 .automizy-button.disabled.automizy-skin-simple-green a{
-    background-color: #cedebc;
+    color: #fff !important;
+    background: #4CAF50 !important;
 }
-
