--- a/src/styles/dialog.css
+++ b/src/styles/dialog.css
@@ -1,5 +1,3 @@
-@import url("https://fonts.googleapis.com/css?family=Roboto");
-
 .automizy-dialog{
     position:fixed;
     left:0;
@@ -14,55 +12,30 @@
     display:inline-block;
     box-sizing:border-box;
     background-color:#ffffff;
-    position: relative;
     width:60%;
     min-width:100px;
     text-indent: 0;
-    border-radius: 3px;
-    -webkit-border-radius: 3px;
-    box-shadow: 0.5px 0.866px 4px 0px rgb( 0, 0, 0 );
-    -webkit-box-shadow: 0.5px 0.866px 4px 0px rgb( 0, 0, 0 );
 }
-
-.automizy-dialog-close{
-    position: absolute;
-    top: 0;
-    right: 0;
-    margin: 4px 9px;
-    color: rgb( 88, 88, 88 );
-    cursor: pointer;
-    z-index: 1000;
-}
-
 .automizy-dialog-head{
-    font-size: 20px;
-    font-family: 'Roboto', sans-serif;
-    color: rgb( 0, 0, 0 );
-    line-height: 1.3;
     text-align: left;
+    color: #898989;
+    font-size: 16px;
+    font-weight: bold;
+    font-family:Arial, Helvetica, sans-serif;
     position: relative;
-    padding: 24px;
+    padding: 14px 24px 8px 24px;
+    border-bottom: 1px solid #e8efe1;
 }
 .automizy-dialog-buttons{
-    height:44px;
-    padding:24px;
-    text-align: right;
+    height:31px;
+    padding:18px 24px 18px 24px
 }
-
-.automizy-dialog-buttons .automizy-button{
-    margin-right: 24px;
-}
-.automizy-dialog-buttons .automizy-button:last-of-type{
-    margin-right: 0;
-}
-
 .automizy-dialog-content{
     text-align:left;
-    font-family: 'Roboto', sans-serif;
-    font-size: 14px;
+    font-family:Arial, Helvetica, sans-serif;
     position: relative;
     box-sizing: border-box;
-    padding: 0 24px;
+    padding: 36px 44px 0 44px;
     max-height: calc(100vh - 111px);
     overflow-x:hidden;
     overflow-y:auto;
